# paska-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: help.rs  mod.rs
src/data/: mod.rs  release.rs
