[package]
name = "paska-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.148"
serenity = "0.11.5"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]