[package]
name = "paska-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0"
serenity = "0.11.5"
uuid = { version = "1.2.2", features = ["serde", "v7"]}

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]